--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-azure-blob-storage": "*",
         "livewire/volt": "^1.7.0",
-        "microsoft/azure-storage-blob": "*"
+        "microsoft/azure-storage-blob": "*",
+        "wapmorgan/mp3info": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
