--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
-APP_NAME=Laravel
+APP_NAME=Zanify
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
@@ -20,25 +17,40 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+# ============================================================
+# DATABASE CONFIGURATION
+# ============================================================
+# Option 1: Local MySQL (untuk development sendiri)
+# DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=db_zanify
 # DB_USERNAME=root
-# DB_PASSWORD=
+# DB_PASSWORD=password
 
-SESSION_DRIVER=database
+# Option 2: Azure MySQL (untuk tim - RECOMMENDED)
+DB_CONNECTION=mysql
+DB_HOST=your-server-name.mysql.database.azure.com
+DB_PORT=3306
+DB_DATABASE=zanify
+DB_USERNAME=your-username
+DB_PASSWORD=your-password
+DB_SSLMODE=require
+MYSQL_ATTR_SSL_CA=
+
+# ============================================================
+
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -46,6 +58,8 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+ADMIN_KEY=
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
@@ -63,3 +77,13 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ADMIN_EMAIL=admin@zanify.com
+ADMIN_PASSWORD=supersecret123
+
+# ============================================================
+# AZURE BLOB STORAGE (untuk file musik)
+# ============================================================
+AZURE_CONNECTION_STRING="your-azure-connection-string"
+AZURE_STORAGE_CONTAINER=music
+AZURE_STORAGE_ENDPOINT=https://your-account.blob.core.windows.net/
